# teacup

./: .env  .gitignore  Cargo.toml  Taskfile.yml  build.rs  docker-compose.yml  docs.md
client/: Cargo.toml
client/src/: env.rs  event_submitter.rs  main.rs
core/: Cargo.toml
core/src/: data_collection.rs  lib.rs
migrations/: 20220622091010_init.sql
protobuf/: change_events.proto  event_service.proto
protocol/: Cargo.toml  build.rs
protocol/protobuf/: change_events.proto
protocol/src/: lib.rs
server/: Cargo.toml  docs.md
server/migrations/: 20220622091010_init.sql
server/src/: database.rs  env.rs  main.rs  metric_service.rs
src/: change_events.rs  client.rs  data_collection.rs  database.rs  event_service.rs  event_submitter.rs  local_settings.rs  main.rs  proto.rs  server.rs  store_events.rs
tc_core/: Cargo.toml
tc_core/src/: data_collection.rs  local_settings.rs
