[package]
name = "teacup"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"

futures-core = "0.3"
futures-util = "0.3"

systemstat = "0.1.10"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

clap = { version = "3.2.1", features = ["derive"] }

diesel = { version = "1.4.4", features = ["postgres"] }

[build-dependencies]
prost-build = { version = "0.9" }
tonic-build = "0.7"
