[package]
name = "teacup"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
# grpc stuff
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"

# system data collection
systemstat = "0.1.10"
num_cpus = "1.13.1"
machine-uid = "0.2"
sha2 = "0.10.2"

# async runtime
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Support for async methods in traits
async-trait = "0.1.56"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.7"

# command line interface
clap = { version = "3.2.1", features = ["derive"] }

# database interface
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","postgres"] }

# For getting common location on machine to store settings
xdg = "2.4.1"

[build-dependencies]
prost-build = { version = "0.9" }
tonic-build = "0.7"
