[package]
name = "tc_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# own protocols
protocol = { path = "../protocol" }

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# system data collection
systemstat = "0.1.10"
num_cpus = "1.13.1"
machine-uid = "0.2"
sha2 = "0.10.2"

# For getting common location on machine to store settings
xdg = "2.4.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.7"

# protobuf types
prost-types = "0.10"
